Conteúdos do dia 01

--- a/curso_pandas.ipynb
+++ b/curso_pandas.ipynb
@@ -13,20 +13,13 @@
    "execution_count": null,
    "id": "819d419b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3.0\n",
-      "2.2.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Importação das bibliotecas necessárias\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "# É possível ver a versão das bibliotecas com os comandos abaixo\n",
     "print(pd.__version__)\n",
     "print(np.__version__)"
    ]
@@ -36,9 +29,17 @@
    "id": "3942e807",
    "metadata": {},
    "source": [
-    "# Series\n",
+    "## Series\n",
     "\n",
     "- Documentação: https://pandas.pydata.org/docs/reference/api/pandas.Series.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa75ac44",
+   "metadata": {},
+   "source": [
+    "### Criação de series"
    ]
   },
   {
@@ -46,20 +47,7 @@
    "execution_count": null,
    "id": "bde5b5e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    10\n",
-      "1    20\n",
-      "2    30\n",
-      "3    40\n",
-      "4    50\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados = pd.Series([10, 20, 30, 40, 50])\n",
     "print(serie_dados) # aparece o tipo (dtype) dos valores"
@@ -70,41 +58,17 @@
    "execution_count": null,
    "id": "8fa9bfdb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(serie_dados) # Tipo de dados da série"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "36f61c8d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A    10\n",
-      "B    20\n",
-      "C    30\n",
-      "D    40\n",
-      "E    50\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "array_inteiros = [10, 20, 30, 40, 50]\n",
     "indices = ['A', 'B', 'C', 'D', 'E']\n",
@@ -114,18 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cc61bf43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10 20 30 40 50]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np_array_inteiros = np.array([10, 20, 30, 40, 50])\n",
     "print(np_array_inteiros)"
@@ -133,44 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "85a0b6c5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(np_array_inteiros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "82a46ea5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    10\n",
-      "1    20\n",
-      "2    30\n",
-      "3    40\n",
-      "4    50\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados = pd.Series(array_inteiros)\n",
     "print(serie_dados)"
@@ -178,89 +110,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "163c41c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5,)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "119726c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados.ndim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7bdc1a4f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7aa7540c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Z    10\n",
-       "X    20\n",
-       "V    30\n",
-       "A    40\n",
-       "B    50\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados.index = ['Z', 'X', 'V', 'A', 'B']\n",
     "serie_dados"
@@ -268,20 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "ce239c8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.98856084 0.92299621 0.49454362 0.84469341 0.77854895 0.51651711\n",
-      " 0.67826575 0.83756395 0.15057579 0.3879482 ]\n",
-      "[0 1 2 3 4 5 6 7 8 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "valores = np.random.random(10)\n",
     "indexes = np.arange(0, 10)\n",
@@ -291,49 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "5ab30b51",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(numpy.ndarray, numpy.ndarray)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(valores), type(indexes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "127f69ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    0.988561\n",
-      "1    0.922996\n",
-      "2    0.494544\n",
-      "3    0.844693\n",
-      "4    0.778549\n",
-      "5    0.516517\n",
-      "6    0.678266\n",
-      "7    0.837564\n",
-      "8    0.150576\n",
-      "9    0.387948\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados = pd.Series(valores, indexes)\n",
     "print(serie_dados)"
@@ -341,42 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "de86432d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype='int64')"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serie_dados.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e8ab43bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dicionario = {'João': 10, 'Alice': 5, 'Gustavo': 6, 'Pedro': 9}\n",
     "type(dicionario)"
@@ -384,22 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "6bf202b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "João       10\n",
-      "Alice       5\n",
-      "Gustavo     6\n",
-      "Pedro       9\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict_serie_dados = pd.Series(dicionario)\n",
     "print(dict_serie_dados)"
@@ -407,31 +217,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "31369961",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict_serie_dados.dtype"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa75ac44",
-   "metadata": {},
-   "source": [
-    "## Criação de series"
    ]
   },
   {
@@ -439,7 +230,70 @@
    "id": "9c0442e5",
    "metadata": {},
    "source": [
-    "## Fatiamento (slicing)"
+    "### Fatiamento (slicing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f2cdff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_dados[:] # Retorna todos os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a3a1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtro por linhas\n",
+    "serie_dados[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8365c84e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_dados[:4] # Ele entende que queremos todos os dados até o índice 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f9e7545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_dados[-1:] # Retorna a última linha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2f4ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_dados[:-1] # Todos os dados, com exceção do último"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ad549a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Podemos criar variáveis com fatias\n",
+    "s3 = serie_dados[:3]\n",
+    "s3"
    ]
   },
   {
@@ -447,7 +301,48 @@
    "id": "bdf708da",
    "metadata": {},
    "source": [
-    "## Cópia, conversão e concatenação"
+    "### Cópia, conversão e concatenação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91d6cd8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Toda vez que eu quiser copiar uma série sem que quaisquer modificações reflitam na nossa série original\n",
+    "serie_dados_2 = serie_dados.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aa36058",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No nosso caso, o tipo do nosso dado é:\n",
+    "serie_dados_2.dtype\n",
+    "\n",
+    "# Para fazer o casting, por exemplo, para inteiros:\n",
+    "serie_dados_2.astype(int) # Como não estamos atribuindo os valores da séria a nada, esse comando não afeta nossa série (a = a.astype(...))\n",
+    "serie_dados_2.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb8ef949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# É possível juntar duas séries, concatenando-as\n",
+    "dados_novos = {'Gustavo': 20, 'Alana': 30}\n",
+    "serie_dados_3 = pd.Series(dados_novos)\n",
+    "\n",
+    "serie_dados_3 = pd.concat([serie_dados_3, dict_serie_dados])\n",
+    "serie_dados_3"
    ]
   }
  ],
